fix spacing input-label

--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -371,11 +371,11 @@ th,td{
 }
 
 .detail .in-1{
-    min-width: 30%;
+    min-width: 25%;
 }
 
 .detail .in-2{
-    min-width: 14.75%;
+    min-width: 12.25%;
 }
 
 .detail p{
